# handlars/order.go
@@ -30,16 +30,27 @@ func (h *handler) CreatOrder(c *gin.Context) {
 		return
 	}
 	// Client bizda bor yo'ligini tekshiramiz!!!
-	_, err := h.grpcClient.Client.GetClientById(c.Request.Context(), &eCommerce.GetClientByIDRequest{
-		Id: body.Client_id,
+	// _, err := h.grpcClient.Client.GetClientById(c.Request.Context(), &eCommerce.GetClientByIDRequest{
+	// 	Id: body.Client_id,
+	// })
+	// if err != nil {
+	// 	c.JSON(http.StatusInternalServerError, models.JSONErrorResponse{
+	// 		Error: "You are not registered! Please register!",
+	// 	})
+	// 	return
+	// }
+
+	token := c.GetHeader("Authorization")
+	hasAccessTokenResponse, err := h.grpcClient.Client.HasAccess(c.Request.Context(), &eCommerce.TokenRequest{
+		Token: token,
 	})
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, models.JSONErrorResponse{
-			Error: "You are not registered! Please register!",
+		c.JSON(http.StatusBadRequest, models.JSONErrorResponse{
+			Error: err.Error(),
 		})
+		c.Abort()
 		return
 	}
-
 	// Tekshiruvdan o'tsa keyingi bosqichga boradi. O'tmasa chiqib ketadi.
 
 	oItem := make([]*eCommerce.OrderItem, 0)
@@ -52,7 +63,7 @@ func (h *handler) CreatOrder(c *gin.Context) {
 	}
 
 	order, err := h.grpcClient.Order.CreateOrder(c.Request.Context(), &eCommerce.CreateOrderRequest{
-		ClientId:   body.Client_id,
+		ClientId:   hasAccessTokenResponse.User.Id,
 		Orderitems: oItem,
 	})
 
@@ -117,6 +128,58 @@ func (h *handler) GetOrderByID(c *gin.Context) {
 //	@Success		200				{object}	models.JSONResult{data=[]models.Order}
 //	@Router			/v1/order/ [get]
 func (h *handler) GetOrderList(c *gin.Context) {
+
+	offsetStr := c.DefaultQuery("offset", h.cfg.Default_Offset)
+	limitStr := c.DefaultQuery("limit", h.cfg.Default_Limit)
+
+	offset, err := strconv.Atoi(offsetStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.JSONErrorResponse{
+			Error: err.Error(),
+		})
+		return
+	}
+
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.JSONErrorResponse{
+			Error: err.Error(),
+		})
+		return
+	}
+
+	orderList, err := h.grpcClient.Order.GetOrderList(c.Request.Context(), &eCommerce.GetOrderListRequest{
+		Offset: int32(offset),
+		Limit:  int32(limit),
+	})
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.JSONErrorResponse{
+			Error: err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, models.JSONResult{
+		Message: "GetOrderList OK",
+		Data:    orderList,
+	})
+}
+
+// GetOrderList godoc
+//
+//	@Summary		Get My List Orders
+//	@Description	Get My List Orders
+//	@Tags			order
+//	@Accept			json
+//	@Produce		json
+//	@Param			offset			query		int		false	"0"
+//	@Param			limit			query		int		false	"100"
+//	@Param			search			query		string	false	"search exapmle"
+//	@Param			Authorization	header		string	false	"Authorization"
+//	@Success		200				{object}	models.JSONResult{data=[]models.Order}
+//	@Router			/v1/order/ [get]
+func (h *handler) GetMyListOrders(c *gin.Context) {
 
 	offsetStr := c.DefaultQuery("offset", h.cfg.Default_Offset)
 	limitStr := c.DefaultQuery("limit", h.cfg.Default_Limit)
